2009-02-17 23:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: use the new code committed to NSMenu to 
	lay out the menu when vertical.  Get rid of the duplicate code here.
	* Source/NSDrawer.m: set the child window position when opening.
	* Source/NSMatrix.m: -_selectCell:atRow:column: Check to make 
	sure the selectedRow and selectedColumn are > -1.  This check is 
	done elsewhere and was not done here.  This was causing a crash.

2009-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImageView.m (-initWithFrame:): Set non-editable as
	default. Fixes #25484.

2009-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-_organizeMenu): Try to better switch between
	Apple menu layout and ours.

2009-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSRulerView.m (+initialize): Correct version to be an integer.

2009-02-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Look for libpng/png.h
	* Source/NSBitmapImageRep+PNG.m: Use found loction of png.h
	(Fixes #24111).

2009-02-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSCell.m (-setStringValue): Try to fix bugs in last change.
	Optimize in case of common string and check for nil.

2009-02-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, -setObjectValue:): Try to fix
	bugs in last change.

2009-02-15 22:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOpenPanel.m: Corrects bug #25471.  Only enable
	the OK button when a file the application can open is selected.

2009-02-15 19:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Change to implement 10.3 and later behavior for
	the method setStringValue: as documented in Apple's documentation
	for the method.  This behavior was observed on Cocoa under 
	Mac OS 10.5.

2009-02-12 Riccardo Mottola <rmottola@users.sf.net>
	
	* Source/NSSavePanel.m: Return autoreleased copy of the directory
	string

2009-02-12 Richard Frith-Macdonald <rfm@gnu.org>
